crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData of
  DataMap payload#13 -> payload#13
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_14
    (force
      [[[[[[(force (builtin chooseData)) generated_14] (delay (error))]
        (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_14]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (builtin mapData)])
--- optimized Core
case@Data mapData of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam generated_3
      (force
        [[[[[[builtin_4 generated_3] (delay (error))]
          (delay [(lam payload_2 payload_2) [(builtin unMapData) generated_3]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      (builtin mapData)])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data mapData of
  DataMap payload#13 -> payload#13
--- isolated folded Core
case@Data mapData of
  DataMap payload#13 -> payload#13
--- isolated cleaned Core
case@Data mapData of
  DataMap payload#13 -> payload#13
--- isolated UPLC before
(program 1.1.0
  [(lam generated_14
    (force
      [[[[[[(force (builtin chooseData)) generated_14] (delay (error))]
        (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_14]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (builtin mapData)])
--- isolated UPLC after
(program 1.1.0
  [(lam generated_14
    (force
      [[[[[[(force (builtin chooseData)) generated_14] (delay (error))]
        (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_14]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (builtin mapData)])
--- result
error: NotAConstant(Builtin(Runtime { args: [], fun: MapData, forces: 0 }))
--- logs
[]
