crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_shared_escape.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#22 : Data = mapData (trace "once" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])) in
let alias#23 : Data = data#22 in
constr 0 data#22 (case@Data alias#23 of
  DataMap payload#24 -> payload#24) (case@Data alias#23 of
  DataMap payload#25 -> payload#25)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_22
    [(lam alias_23
      (constr 0
        data_22
        [(lam generated_26
          (force
            [[[[[[(force (builtin chooseData)) generated_26] (delay (error))]
              (delay [(lam payload_24 payload_24) [(builtin unMapData) generated_26]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_23]
        [(lam generated_27
          (force
            [[[[[[(force (builtin chooseData)) generated_27] (delay (error))]
              (delay [(lam payload_25 payload_25) [(builtin unMapData) generated_27]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_23]))
      data_22])
    [(builtin mapData)
      (force
        [[(force (builtin trace)) (con string "once")]
          (delay
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])]])
--- optimized Core
let anf#5 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let data#1 : Data = mapData anf#5 in
constr 0 data#1 anf#5 anf#5
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam anf_2
      [(lam data_3 (constr 0 data_3 anf_2 anf_2)) [(builtin mapData) anf_2]])
      (force
        [[builtin_4 (con string "once")]
          (delay
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#26 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let data#22 : Data = mapData anf#26 in
let alias#23 : Data = data#22 in
let anf#27 : list (pair Data Data) = case@Data alias#23 of
  DataMap payload#24 -> payload#24 in
let anf#28 : list (pair Data Data) = case@Data alias#23 of
  DataMap payload#25 -> payload#25 in
constr 0 data#22 anf#27 anf#28
--- isolated folded Core
let anf#26 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let data#22 : Data = mapData anf#26 in
let alias#23 : Data = data#22 in
let anf#27 : list (pair Data Data) = let payload#24 : list (pair Data Data) = anf#26 in
payload#24 in
let anf#28 : list (pair Data Data) = let payload#25 : list (pair Data Data) = anf#26 in
payload#25 in
constr 0 data#22 anf#27 anf#28
--- isolated cleaned Core
let anf#26 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
let data#22 : Data = mapData anf#26 in
constr 0 data#22 anf#26 anf#26
--- isolated UPLC before
(program 1.1.0
  [(lam anf_26
    [(lam data_22
      [(lam alias_23
        [(lam anf_27
          [(lam anf_28 (constr 0 data_22 anf_27 anf_28))
            [(lam generated_29
              (force
                [[[[[[(force (builtin chooseData)) generated_29] (delay (error))]
                  (delay [(lam payload_25 payload_25) [(builtin unMapData) generated_29]])]
                  (delay (error))]
                  (delay (error))]
                  (delay (error))]))
              alias_23]])
          [(lam generated_30
            (force
              [[[[[[(force (builtin chooseData)) generated_30] (delay (error))]
                (delay [(lam payload_24 payload_24) [(builtin unMapData) generated_30]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            alias_23]])
        data_22])
      [(builtin mapData) anf_26]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay
          (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_26
    [(lam data_22 (constr 0 data_22 anf_26 anf_26)) [(builtin mapData) anf_26]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay
          (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))])])
--- result
(constr 0
  (con data (Map [(I 42, I 7), (I 7, I 42), (I 42, I 42)]))
  (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])
  (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]))
--- logs
["once"]
