crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_strict_failure_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#29 : Data = mapData (trace "operand" in error) in
let effect#31 : int = trace "between" in 0 in
case@Data data#29 of
  DataMap payload#30 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_29
    [(lam effect_31
      [(lam generated_32
        (force
          [[[[[[(force (builtin chooseData)) generated_32] (delay (error))]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_29])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [(builtin mapData)
      (force [[(force (builtin trace)) (con string "operand")] (delay (error))])]])
--- optimized Core
let anf#4 : list (pair Data Data) = trace "operand" in error in
let data#1 : Data = mapData anf#4 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam anf_3
      [(lam data_5
        [(lam effect_6
          (force [[builtin_7 (con string "selected")] (delay (con integer 9))]))
          (force [[builtin_7 (con string "between")] (delay (con integer 0))])])
        [(builtin mapData) anf_3]])
      (force [[builtin_7 (con string "operand")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#32 : list (pair Data Data) = trace "operand" in error in
let data#29 : Data = mapData anf#32 in
let effect#31 : int = trace "between" in 0 in
case@Data data#29 of
  DataMap payload#30 -> trace "selected" in 9
--- isolated folded Core
let anf#32 : list (pair Data Data) = trace "operand" in error in
let data#29 : Data = mapData anf#32 in
let effect#31 : int = trace "between" in 0 in
let payload#30 : list (pair Data Data) = anf#32 in
trace "selected" in 9
--- isolated cleaned Core
let anf#32 : list (pair Data Data) = trace "operand" in error in
let data#29 : Data = mapData anf#32 in
let effect#31 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_32
    [(lam data_29
      [(lam effect_31
        [(lam generated_33
          (force
            [[[[[[(force (builtin chooseData)) generated_33] (delay (error))]
              (delay
                (force
                  [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          data_29])
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin mapData) anf_32]])
    (force [[(force (builtin trace)) (con string "operand")] (delay (error))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_32
    [(lam data_29
      [(lam effect_31
        (force
          [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
        (force
          [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
      [(builtin mapData) anf_32]])
    (force [[(force (builtin trace)) (con string "operand")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["operand"]
