crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_traced.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (trace "producer" in mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])) of
  DataMap payload#13 -> payload#13
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_14
    (force
      [[[[[[(force (builtin chooseData)) generated_14] (delay (error))]
        (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_14]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay
          [(builtin mapData)
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])])])])
--- optimized Core
let anf#2 : Data = trace "producer" in (con data (Map [(I 42, I 7), (I 7, I 42), (I 42, I 42)])) in
case@Data anf#2 of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_3
        [(lam generated_5
          (force
            (case
              (constr 0
                generated_5
                (delay (error))
                (delay [(builtin unMapData) generated_5])
                (delay (error))
                (delay (error))
                (delay (error)))
              builtin_6)))
          anf_3])
        (force
          [[builtin_7 (con string "producer")]
            (delay (con data (Map [(I 42, I 7), (I 7, I 42), (I 42, I 42)])))])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#16 : Data = trace "producer" in mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
case@Data anf#16 of
  DataMap payload#13 -> payload#13
--- isolated folded Core
let anf#16 : Data = trace "producer" in mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
case@Data anf#16 of
  DataMap payload#13 -> payload#13
--- isolated cleaned Core
let anf#16 : Data = trace "producer" in mapData (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))]) in
case@Data anf#16 of
  DataMap payload#13 -> payload#13
--- isolated UPLC before
(program 1.1.0
  [(lam anf_16
    [(lam generated_17
      (force
        [[[[[[(force (builtin chooseData)) generated_17] (delay (error))]
          (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_17]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_16])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay
          [(builtin mapData)
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])])])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_16
    [(lam generated_17
      (force
        [[[[[[(force (builtin chooseData)) generated_17] (delay (error))]
          (delay [(lam payload_13 payload_13) [(builtin unMapData) generated_17]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_16])
    (force
      [[(force (builtin trace)) (con string "producer")]
        (delay
          [(builtin mapData)
            (con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])])])])
--- result
(con (list (pair data data)) [((I 42), (I 7)), ((I 7), (I 42)), ((I 42), (I 42))])
--- logs
["producer"]
