crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list integer) []) of
  DataMap payload#73 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_74
    (force
      [[[[[[(force (builtin chooseData)) generated_74] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list integer) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list integer) []) in
(con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list (pair data data)) []))
    [(builtin mapData) (con (list integer) [])]])
--- isolated pass
--- isolated ANF input
let anf#74 : Data = mapData (con (list integer) []) in
case@Data anf#74 of
  DataMap payload#73 -> (con (list (pair data data)) [])
--- isolated folded Core
let data_operand#75 : list int = (con (list integer) []) in
let anf#74 : Data = mapData data_operand#75 in
let payload#73 : list (pair Data Data) = data_operand#75 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#74 : Data = mapData (con (list integer) []) in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_74
    [(lam generated_75
      (force
        [[[[[[(force (builtin chooseData)) generated_75] (delay (error))]
          (delay (con (list (pair data data)) []))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_74])
    [(builtin mapData) (con (list integer) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_74 (con (list (pair data data)) []))
    [(builtin mapData) (con (list integer) [])]])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Integer, [])))
--- logs
[]
