crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list integer) []) of
  DataMap payload#76 -> payload#76
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_77
    (force
      [[[[[[(force (builtin chooseData)) generated_77] (delay (error))]
        (delay [(lam payload_76 payload_76) [(builtin unMapData) generated_77]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list integer) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list integer) []) in
case@Data anf#2 of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unMapData) generated_5]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin mapData) (con (list integer) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#77 : Data = mapData (con (list integer) []) in
case@Data anf#77 of
  DataMap payload#76 -> payload#76
--- isolated folded Core
let data_operand#78 : list int = (con (list integer) []) in
let anf#77 : Data = mapData data_operand#78 in
let payload#76 : list (pair Data Data) = data_operand#78 in
payload#76
--- isolated cleaned Core
let data_operand#78 : list int = (con (list integer) []) in
let anf#77 : Data = mapData data_operand#78 in
data_operand#78
--- isolated UPLC before
(program 1.1.0
  [(lam anf_77
    [(lam generated_78
      (force
        [[[[[[(force (builtin chooseData)) generated_78] (delay (error))]
          (delay [(lam payload_76 payload_76) [(builtin unMapData) generated_78]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_77])
    [(builtin mapData) (con (list integer) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_78
    [(lam anf_77 data_operand_78) [(builtin mapData) data_operand_78]])
    (con (list integer) [])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Integer, [])))
--- logs
[]
