crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_items_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list integer) [7]) of
  DataMap payload#82 -> payload#82
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_83
    (force
      [[[[[[(force (builtin chooseData)) generated_83] (delay (error))]
        (delay [(lam payload_82 payload_82) [(builtin unMapData) generated_83]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list integer) [7])]])
--- optimized Core
let data_operand#3 : list int = (con (list integer) [7]) in
let anf#2 : Data = mapData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin mapData) data_operand_1]])
    (con (list integer) [7])])
--- isolated pass
--- isolated ANF input
let anf#83 : Data = mapData (con (list integer) [7]) in
case@Data anf#83 of
  DataMap payload#82 -> payload#82
--- isolated folded Core
let data_operand#84 : list int = (con (list integer) [7]) in
let anf#83 : Data = mapData data_operand#84 in
let payload#82 : list (pair Data Data) = data_operand#84 in
payload#82
--- isolated cleaned Core
let data_operand#84 : list int = (con (list integer) [7]) in
let anf#83 : Data = mapData data_operand#84 in
data_operand#84
--- isolated UPLC before
(program 1.1.0
  [(lam anf_83
    [(lam generated_84
      (force
        [[[[[[(force (builtin chooseData)) generated_84] (delay (error))]
          (delay [(lam payload_82 payload_82) [(builtin unMapData) generated_84]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_83])
    [(builtin mapData) (con (list integer) [7])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_84
    [(lam anf_83 data_operand_84) [(builtin mapData) data_operand_84]])
    (con (list integer) [7])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Integer, [Integer(7)])))
--- logs
[]
