crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_pair_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data integer)) []) of
  DataMap payload#85 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_86
    (force
      [[[[[[(force (builtin chooseData)) generated_86] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list (pair data integer)) []) in
(con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list (pair data data)) []))
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- isolated pass
--- isolated ANF input
let anf#86 : Data = mapData (con (list (pair data integer)) []) in
case@Data anf#86 of
  DataMap payload#85 -> (con (list (pair data data)) [])
--- isolated folded Core
let data_operand#87 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#86 : Data = mapData data_operand#87 in
let payload#85 : list (pair Data Data) = data_operand#87 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#86 : Data = mapData (con (list (pair data integer)) []) in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_86
    [(lam generated_87
      (force
        [[[[[[(force (builtin chooseData)) generated_87] (delay (error))]
          (delay (con (list (pair data data)) []))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_86])
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_86 (con (list (pair data data)) []))
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Pair(Data, Integer), [])))
--- logs
[]
